--- a/app/views/questions/_question.html.erb
+++ b/app/views/questions/_question.html.erb
@@ -1,8 +1,8 @@
 <div class="mb-sm text-dark-red">
-  <% if question.user == question.author || question.author.nil? %>
-    <%= "@#{question_author(question)}" %>
+  <% if question.author.nil? || @user == question.author %>
+    <%= question_author(question) %>
   <% else %>
-    <%= link_to "@#{question_author(question)}", user_path(question.author) %>
+    <%= link_to question_author(question), user_path(question.author) %>
   <% end %>
 </div>
 
